<resources>
    <string name="app_name">NutterTools</string>

    <string name="activity_my_ads_name">Мои объявления</string>
    <string name="activity_my_reservations_name">Мои бронирования</string>
    <string name="activity_my_addresses_name">Мои адреса</string>
    <string name="activity_notifications_name">Уведомления</string>
    <string name="activity_my_ads_full_name">Информация об объявлении</string>
    <string name="activity_my_ad_name">Создать объявление</string>

    <string name="title_last_added_items">Последние добавленные</string>

    <string name="menu_browse">Главная</string>
    <string name="menu_add">Избранное</string>
    <string name="menu_messages">Мои заказы</string>
    <string name="menu_personal">Профиль</string>

    <string name="text_photo">Фотографии</string>
    <string name="text_title">Название</string>
    <string name="text_description">Описание</string>
    <string name="text_second_activity">Создать объявление</string>
    <string name="text_location">Местоположение</string>
    <string name="text_addresses">Мои адреса</string>
    <string name="text_new_address">Новый адрес</string>
    <string name="text_complete">готово</string>
    <string name="text_category">Категория</string>
    <string name="text_price"> ₽</string>

    <string name="hint_title">Название</string>
    <string name="hint_region">Регион</string>
    <string name="hint_city">Город</string>
    <string name="hint_address">Адрес</string>
    <string name="hint_index">Индекс</string>
    <string name="hint_title_sample">Например: Дрель, ударная 1200 rpm</string>
    <string name="hint_description_sample">Описание (до 300 символов)</string>
    <string name="hint_price">Стоимость</string>
    <string name="hint_comment">добавьте комментарий</string>

    <string name="test">Указать новый адрес или выбрать из списка</string>


    <string name="button_submit">Разместить</string>
    <string name="title_activity_full_info">FullInfoActivity</string>
    <string name="title_activity_login">Войти</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль (опционально)</string>
    <string name="action_sign_in">Войти или зарегистрироваться</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="error_invalid_email">Неверный email</string>
    <string name="error_invalid_password">Пароль короткий</string>
    <string name="error_incorrect_password">Неверный пароль</string>
    <string name="error_field_required">Это поле обязательно</string>
    <string name="permission_rationale">Необходимо разрешение для доступа к электронной почте</string>

    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="phone_title_text">Номер телефона</string>
    <string name="auth_failed">Ошибка авторизации</string>
    <string name="start_phone_auth">Старт</string>
    <string name="verify_phone_auth">Подтверждение</string>
    <string name="resend_phone_auth">Переотправить</string>
    <string name="hint_phone_number">Номер телефона</string>
    <string name="hint_verification_code">Код подтверждения</string>
    <string name="status_code_sent">Код отправлен</string>
    <string name="status_verification_failed">Ошибка подтвеждения</string>
    <string name="status_verification_succeeded">Успешное подтверждение</string>
    <string name="status_sign_in_failed">Ошибка входа</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="title_personal_sign_in">Авторизация</string>
    <string name="title_personal_sign_out">Выйти</string>
    <string name="default_notification_channel_id">99</string>
    <string name="my_reservations">Мои бронирования</string>
    <string name="last_location">Последнее местоположение</string>

    <string name="button_pin">Добавить адрес</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="notifications_admin_channel_name">admin channel</string>
    <string name="notifications_admin_channel_description">admin_channel_desc</string>

    <string name="title_my_orders">Мои заказы</string>
    <string name="title_my_booking">Мои бронирования</string>
    <string name="title_profile_edit">Редактирование</string>
    <string name="title_categories">Категории</string>

    <string name="dialog_wait">Пожалуйста, подождите!</string>

    <string name="tv_pending_approval">В ожидании подтверждения</string>
    <string name="tv_confirm">Подтвердить</string>
    <string name="tv_confirmed">Подтвержден</string>
    <string name="tv_waiting_for_return">В ожидании возврата</string>
    <string name="tv_not_verified">Не подтвержден</string>
    <string name="tv_unknown_status">Статус неизвестен</string>
    <string name="tv_not_booked">Не забронирован!</string>
    <string name="tv_delivery_method">Способ отправки: доставка</string>
    <string name="tv_not_authorization">Вы не авторизованы</string>

    <string name="toast_something_wrong">Что-то пошло не так</string>
    <string name="toast_successfull_logout">Успешный выход</string>
    <string name="toast_success_profile_edit">Профиль успешно изменен!</string>
    <string name="toast_did_not_like_something">Тебе что-то не понравилось</string>
    <string name="toast_fill_all_fields">Заполните все поля</string>
    <string name="toast_add_one_image">Добавьте хотя бы одно изображение</string>
    <string name="toast_error_data_send">Ошибка отправки данных</string>
    <string name="toast_ad_placed">Объявление размещено</string>
    <string name="toast_error_image_removing">Ошибка удаления изображения</string>
    <string name="toast_no_access_location">Нет доступа к местоположению</string>
    <string name="toast_current_location">Текущее местоположение</string>
    <string name="toast_default_address_edit_error">Ошибка изменения адреса по-умолчанию</string>
    <string name="toast_address_delete_error">Ошибка удаления адреса</string>
    <string name="toast_item_reserved">Товар забронирован!</string>
    <string name="toast_document_not_exist">Документа не существует!</string>

    <string name="snackbar_quote_exc">Квота превышена</string>

    <string name="et_invalid_code">Неверный код</string>
    <string name="et_invalid_phone">Неверный номер телефона</string>
    <string name="et_not_be_empty">Не может быть пустым</string>
    <string name="et_should_enter_name">Вы должны ввести имя</string>
    <string name="et_should_enter_phone">Вы должны ввести номер</string>

    <string name="dialog_approve_ad_placement">Подтверждаете размещение объявления?</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_choose_from_galery">Выбрать из галереи</string>
    <string name="dialog_take_photo">Сделать фото на камеру</string>
    <string name="dialog_get_out">Действительно хотите выйти?</string>
    <string name="dialog_info_will_lost">После выхода вся информация будет утеряна</string>
    <string name="dialog_yes">Да</string>
    <string name="dialog_no">Нет</string>
    <string name="dialog_please_wait">Пожалуйста, подождите!</string>

</resources>