<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">

                <android.support.design.widget.CollapsingToolbarLayout
                    android:id="@+id/collapsingToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:collapsedTitleTextAppearance="@style/collapsingToolbarLayoutTitleColor"
                    app:contentScrim="?attr/colorPrimary"
                    app:expandedTitleTextAppearance="@style/expandedToolbarLayoutTitleColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
                    app:titleEnabled="false"
                    app:toolbarId="@+id/toolbar">

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
                        app:title="dfd">

                    </android.support.v7.widget.Toolbar>
                </android.support.design.widget.CollapsingToolbarLayout>
            </android.support.design.widget.AppBarLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                app:cardCornerRadius="0dp"
                app:cardElevation="1.5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appbar">


                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="74dp"
                        android:layout_height="74dp"
                        android:layout_marginBottom="0dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="0dp"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@android:drawable/ic_menu_camera" />

                    <ImageButton
                        android:id="@+id/imageButton1"
                        android:layout_width="74dp"
                        android:layout_height="74dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="8dp"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageButton"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@android:drawable/ic_menu_camera" />

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="74dp"
                        android:layout_height="74dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="8dp"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageButton1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@android:drawable/ic_menu_camera" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/text_photo"
                        android:textColor="@color/primaryText"
                        android:visibility="invisible"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:layout_marginTop="25dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:reverseLayout="false" />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/card_view1"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="1.5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view1">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayout6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        app:counterEnabled="true"
                        app:counterMaxLength="30"
                        app:counterOverflowTextAppearance="@style/counterOverride"
                        app:counterTextAppearance="@style/counterText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/text_title"
                            android:inputType="textCapSentences"
                            android:lines="1"
                            android:maxLines="1"
                            android:scrollHorizontally="true" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayout5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:inputType="textCapSentences"
                        app:counterEnabled="true"
                        app:counterMaxLength="50"
                        app:counterOverflowTextAppearance="@style/counterOverride"
                        app:counterTextAppearance="@style/counterText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:ems="10"
                            android:hint="@string/text_description" />
                    </android.support.design.widget.TextInputLayout>

                    <Spinner
                        android:id="@+id/spinnerCustomPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="23dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="20dp"
                        android:entries="@array/spinner_price"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textInputLayout7"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayout7"
                        android:layout_width="0dp"
                        android:layout_height="56dp"
                        android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toStartOf="@+id/spinnerCustomPrice"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/textInputEditText7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_price"
                            android:inputType="number"
                            android:lines="1"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>

                    <Spinner
                        android:id="@+id/SpinnerCustom"
                        android:layout_width="0dp"
                        android:layout_height="23dp"

                        android:layout_marginBottom="24dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="24dp"
                        android:spinnerMode="dialog"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7" />

                </android.support.constraint.ConstraintLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view3"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/card_view2"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="1.5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view2"
                app:layout_constraintVertical_bias="0.0">


                <android.support.constraint.ConstraintLayout
                    android:id="@+id/constraintLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">


                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/ic_location_on_black_24dp"
                        android:tint="@color/secondaryText"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/text_location"
                        android:textColor="@color/primaryText"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="270dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:ellipsize="end"
                        android:lines="2"
                        android:maxLines="2"
                        android:scrollHorizontally="true"
                        android:text="@string/test"
                        android:textColor="@color/secondaryText"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                        android:tint="@color/secondaryText"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>


        </android.support.constraint.ConstraintLayout>


    </ScrollView>

    <android.support.v7.widget.CardView
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_gravity="bottom"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        app:cardBackgroundColor="@color/amber_600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView100"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/button_submit"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="77dp" />

    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>